z-index fixed on burgermenu

--- a/taskgv-front/src/scss/components/Burger.scss
+++ b/taskgv-front/src/scss/components/Burger.scss
@@ -7,6 +7,7 @@
     height: 48px;
     padding:.5rem;
     background-color: transparent;
+    z-index:100;
     @include tablet-p_phone-l {
         display: flex;
     }
@@ -18,6 +19,7 @@
     background-color: transparent;
     border: none;
     color: inherit;
+    z-index: 1000;
 }
 
 .burger__box__ul {
@@ -35,6 +37,7 @@
     visibility: hidden;
     background-color: rgba(0, 0, 0, 0.61);
     transition: all .8s ease-out;
+    z-index: 1000;
 }
 
 .show-menu .burger__box__ul {
